| Summary: | ASTERISK-25091: Asterisk REST API - bridge.addChannel crash asterisk when calling channel hangup while adding to bridge | ||
| Reporter: | Ilya Trikoz (Awesome) | Labels: | |
| Date Opened: | 2015-05-15 04:18:21 | Date Closed: | 2015-06-19 10:13:37 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_ari Resources/res_ari_bridges |
| Versions: | 13.3.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace.txt ( 1) extensions.conf.txt ( 2) issue_25091_full_log_1.txt ( 3) stasis.js | |
| Description: | calling from 501 to 502 using stasis application,
if 502 do answer then quick hangup astetisk crashing. error occurred while adding channels in to the bridge, guess asterisk thinks that channel is exist but in fact channel in phase of destroying. | ||
| Comments: | By: Rusty Newton (rnewton) 2015-05-17 16:33:45.263-0500 We require additional debug to continue with triage of your issue. Please follow the instructions on the wiki [1] for how to collect debugging information from Asterisk. For expediency, where possible, attach the debug with a '.txt' file extension so that the debug will be usable for further analysis. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Rusty Newton (rnewton) 2015-05-17 16:34:47.894-0500 Use 'Send Back' or 'Enter Feedback' to send the issue back to us. By: Ilya Trikoz (Awesome) 2015-05-21 04:37:23.780-0500 some times asterisk crashes, some time just stops responding to all sip request. this time it's crash By: Mark Michelson (mmichelson) 2015-06-17 13:40:08.524-0500 Thanks for the sample script. I've been playing with it and can indeed reproduce the problem. It appears there are quite a few bad behaviors in Asterisk. I'll try to get as much of it fixed as I can as quickly as possible. | ||